Commit 14/09/2025